--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 494
+  Left = 535
   Height = 678
-  Top = 246
+  Top = 195
   Width = 1280
   Caption = 'Pascalcity'
   ClientHeight = 678
@@ -47,14 +47,14 @@ object Form1: TForm1
     TabOrder = 3
   end
   object PageControl1: TPageControl
-    Left = 1067
+    Left = 1064
     Height = 200
     Top = 160
     Width = 200
-    ActivePage = TabSheet10
+    ActivePage = TabSheet9
     MultiLine = True
     ParentFont = False
-    TabIndex = 9
+    TabIndex = 8
     TabOrder = 4
     Options = [nboMultiLine]
     object TabSheet1: TTabSheet
@@ -63,7 +63,7 @@ object Form1: TForm1
       ClientWidth = 192
       ParentFont = False
       object Image1: TImage
-        Left = 0
+        Left = 24
         Height = 21
         Hint = 'Landstraße (2 Spuren)'#13#10'Preis: 100€'
         Top = 0
@@ -82,7 +82,7 @@ object Form1: TForm1
         ShowHint = True
       end
       object Image3: TImage
-        Left = 21
+        Left = 0
         Height = 21
         Top = 0
         Width = 21
@@ -95,18 +95,21 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image4Click
       end
       object Image5: TImage
         Left = 64
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image5Click
       end
       object Image6: TImage
         Left = 85
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image6Click
       end
     end
     object TabSheet2: TTabSheet
@@ -148,24 +151,28 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image7Click
       end
       object Image8: TImage
         Left = 64
         Height = 43
         Top = 0
         Width = 43
+        OnClick = Image8Click
       end
       object Image9: TImage
         Left = 107
         Height = 43
         Top = 0
         Width = 43
+        OnClick = Image9Click
       end
       object Image10: TImage
         Left = 0
         Height = 43
         Top = 43
         Width = 64
+        OnClick = Image10Click
       end
     end
     object TabSheet3: TTabSheet
@@ -178,18 +185,21 @@ object Form1: TForm1
         Height = 43
         Top = 0
         Width = 43
+        OnClick = Image23Click
       end
       object Image24: TImage
         Left = 0
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image24Click
       end
       object Image25: TImage
         Left = 43
         Height = 21
         Top = 43
         Width = 85
+        OnClick = Image25Click
       end
       object Image26: TImage
         Left = 128
@@ -202,6 +212,7 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 43
+        OnClick = Image27Click
       end
       object Image28: TImage
         Left = 107
@@ -220,24 +231,28 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image11Click
       end
       object Image12: TImage
         Left = 21
         Height = 43
         Top = 0
         Width = 43
+        OnClick = Image12Click
       end
       object Image13: TImage
         Left = 0
         Height = 64
         Top = 43
         Width = 64
+        OnClick = Image13Click
       end
       object Image14: TImage
         Left = 64
         Height = 85
         Top = 0
         Width = 85
+        OnClick = Image14Click
       end
     end
     object TabSheet5: TTabSheet
@@ -250,24 +265,28 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image15Click
       end
       object Image16: TImage
         Left = 21
         Height = 43
         Top = 0
         Width = 43
+        OnClick = Image16Click
       end
       object Image17: TImage
         Left = 64
         Height = 85
         Top = 0
         Width = 85
+        OnClick = Image17Click
       end
       object Image18: TImage
         Left = 0
         Height = 64
         Top = 43
         Width = 64
+        OnClick = Image18Click
       end
     end
     object TabSheet6: TTabSheet
@@ -280,24 +299,28 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image19Click
       end
       object Image20: TImage
         Left = 21
         Height = 43
         Top = 0
         Width = 43
+        OnClick = Image20Click
       end
       object Image21: TImage
         Left = 64
         Height = 85
         Top = 0
         Width = 85
+        OnClick = Image21Click
       end
       object Image22: TImage
         Left = 0
         Height = 64
         Top = 43
         Width = 64
+        OnClick = Image22Click
       end
     end
     object TabSheet7: TTabSheet
@@ -310,24 +333,28 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image29Click
       end
       object Image30: TImage
         Left = 21
         Height = 43
         Top = 0
         Width = 43
+        OnClick = Image30Click
       end
       object Image31: TImage
         Left = 64
         Height = 85
         Top = 0
         Width = 85
+        OnClick = Image31Click
       end
       object Image32: TImage
         Left = 0
         Height = 64
         Top = 43
         Width = 64
+        OnClick = Image32Click
       end
     end
     object TabSheet8: TTabSheet
@@ -340,24 +367,28 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image33Click
       end
       object Image34: TImage
         Left = 21
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image34Click
       end
       object Image35: TImage
         Left = 43
         Height = 43
         Top = 0
         Width = 43
+        OnClick = Image35Click
       end
       object Image36: TImage
         Left = 85
         Height = 64
         Top = 0
         Width = 85
+        OnClick = Image36Click
       end
     end
     object TabSheet9: TTabSheet
@@ -370,6 +401,7 @@ object Form1: TForm1
         Height = 21
         Top = 0
         Width = 21
+        OnClick = Image37Click
       end
     end
     object TabSheet10: TTabSheet
@@ -381,18 +413,21 @@ object Form1: TForm1
         Height = 26
         Top = 0
         Width = 26
+        OnClick = Image38Click
       end
       object Image39: TImage
         Left = 24
         Height = 26
         Top = 0
         Width = 26
+        OnClick = Image39Click
       end
       object Image40: TImage
         Left = 48
         Height = 26
         Top = 0
         Width = 26
+        OnClick = Image40Click
       end
     end
   end
