Gebäude können nurnoch neben Straßen gebaut werden

--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,74 +1,73 @@
 object Form1: TForm1
-  Left = 751
-  Height = 1017
-  Top = 248
-  Width = 1920
+  Left = 476
+  Height = 678
+  Top = 180
+  Width = 1280
   Caption = 'Pascalcity'
-  ClientHeight = 1017
-  ClientWidth = 1920
-  DesignTimePPI = 144
+  ClientHeight = 678
+  ClientWidth = 1280
   OnClick = FormClick
-  LCLVersion = '2.2.4.0'
+  LCLVersion = '2.0.12.0'
   object ToggleBox1: TToggleBox
-    Left = 1512
-    Height = 64
-    Top = 600
-    Width = 64
+    Left = 1008
+    Height = 43
+    Top = 400
+    Width = 43
     Caption = 'Build'
     ParentFont = False
     TabOrder = 0
     Visible = False
   end
   object ToggleBox2: TToggleBox
-    Left = 1552
-    Height = 96
-    Top = 796
-    Width = 96
+    Left = 1035
+    Height = 64
+    Top = 531
+    Width = 64
     Caption = 'Destroy'
     ParentFont = False
     TabOrder = 1
     Visible = False
   end
   object Button1: TButton
-    Left = 165
-    Height = 38
-    Top = 166
-    Width = 112
+    Left = 110
+    Height = 25
+    Top = 111
+    Width = 75
     Caption = 'Start'
     OnClick = Button1Click
     ParentFont = False
     TabOrder = 2
   end
   object SpinEdit1: TSpinEdit
-    Left = 398
-    Height = 33
-    Top = 138
-    Width = 75
+    Left = 265
+    Height = 23
+    Top = 92
+    Width = 50
     ParentFont = False
     TabOrder = 3
   end
   object PageControl1: TPageControl
-    Left = 1596
-    Height = 300
-    Top = 240
-    Width = 300
-    ActivePage = TabSheet1
+    Left = 1064
+    Height = 200
+    Top = 160
+    Width = 200
+    ActivePage = TabSheet3
     MultiLine = True
     ParentFont = False
-    TabIndex = 0
+    TabIndex = 2
     TabOrder = 4
     Options = [nboMultiLine]
     object TabSheet1: TTabSheet
       Caption = 'Straßen'
-      ClientHeight = 172
-      ClientWidth = 292
+      ClientHeight = 112
+      ClientWidth = 192
       ParentFont = False
       object Image1: TImage
-        Left = 36
-        Height = 32
+        Left = 24
+        Height = 21
         Hint = 'Landstraße (2 Spuren)'#13#10'Preis: 100€'
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image1Click
         ParentShowHint = False
         Picture.Data = {
@@ -84,9 +83,9 @@ object Form1: TForm1
       end
       object Image3: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image3Click
         ParentShowHint = False
         Picture.Data = {
@@ -118,10 +117,10 @@ object Form1: TForm1
         ShowHint = True
       end
       object Image4: TImage
-        Left = 64
-        Height = 32
+        Left = 43
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image4Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963C902000089504E47
@@ -151,10 +150,10 @@ object Form1: TForm1
         }
       end
       object Image5: TImage
-        Left = 96
-        Height = 32
+        Left = 64
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image5Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963C902000089504E47
@@ -190,10 +189,10 @@ object Form1: TForm1
       ClientWidth = 292
       ParentFont = False
       object Image2: TImage
-        Left = 32
-        Height = 64
+        Left = 21
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image2Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963A818000089504E47
@@ -399,9 +398,9 @@ object Form1: TForm1
       end
       object Image7: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image7Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B477261706869632206000089504E47
@@ -457,10 +456,10 @@ object Form1: TForm1
         }
       end
       object Image8: TImage
-        Left = 96
-        Height = 64
+        Left = 64
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image8Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B477261706869639721000089504E47
@@ -736,10 +735,10 @@ object Form1: TForm1
         }
       end
       object Image9: TImage
-        Left = 160
-        Height = 64
+        Left = 107
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image9Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B477261706869634121000089504E47
@@ -1013,9 +1012,9 @@ object Form1: TForm1
       end
       object Image10: TImage
         Left = 0
-        Height = 64
-        Top = 64
-        Width = 96
+        Height = 43
+        Top = 43
+        Width = 64
         OnClick = Image10Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963D52D000089504E47
@@ -1391,14 +1390,14 @@ object Form1: TForm1
     end
     object TabSheet3: TTabSheet
       Caption = 'Wasser'
-      ClientHeight = 172
-      ClientWidth = 292
+      ClientHeight = 112
+      ClientWidth = 192
       ParentFont = False
       object Image23: TImage
-        Left = 32
-        Height = 64
+        Left = 21
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image23Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963B31D000089504E47
@@ -1644,9 +1643,9 @@ object Form1: TForm1
       end
       object Image24: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image24Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B477261706869634307000089504E47
@@ -1711,10 +1710,10 @@ object Form1: TForm1
         }
       end
       object Image25: TImage
-        Left = 64
-        Height = 32
-        Top = 64
-        Width = 128
+        Left = 43
+        Height = 21
+        Top = 43
+        Width = 85
         OnClick = Image25Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B477261706869633525000089504E47
@@ -2019,16 +2018,16 @@ object Form1: TForm1
         }
       end
       object Image26: TImage
-        Left = 192
-        Height = 128
+        Left = 128
+        Height = 85
         Top = 0
-        Width = 32
+        Width = 21
       end
       object Image27: TImage
-        Left = 96
-        Height = 32
+        Left = 64
+        Height = 21
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image27Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963F30B000089504E47
@@ -2131,10 +2130,10 @@ object Form1: TForm1
         }
       end
       object Image28: TImage
-        Left = 160
-        Height = 64
+        Left = 107
+        Height = 43
         Top = 0
-        Width = 32
+        Width = 21
       end
     end
     object TabSheet4: TTabSheet
@@ -2144,9 +2143,9 @@ object Form1: TForm1
       ParentFont = False
       object Image11: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image11Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B477261706869635B09000089504E47
@@ -2228,10 +2227,10 @@ object Form1: TForm1
         }
       end
       object Image12: TImage
-        Left = 32
-        Height = 64
+        Left = 21
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image12Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B477261706869630520000089504E47
@@ -2496,9 +2495,9 @@ object Form1: TForm1
       end
       object Image13: TImage
         Left = 0
-        Height = 96
-        Top = 64
-        Width = 96
+        Height = 64
+        Top = 43
+        Width = 64
         OnClick = Image13Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963031C000089504E47
@@ -2729,10 +2728,10 @@ object Form1: TForm1
         }
       end
       object Image14: TImage
-        Left = 88
-        Height = 128
-        Top = -8
-        Width = 128
+        Left = 59
+        Height = 85
+        Top = -5
+        Width = 85
         OnClick = Image14Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B477261706869635894000089504E47
@@ -3933,30 +3932,30 @@ object Form1: TForm1
       ParentFont = False
       object Image15: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image15Click
       end
       object Image16: TImage
-        Left = 32
-        Height = 64
+        Left = 21
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image16Click
       end
       object Image17: TImage
-        Left = 96
-        Height = 128
+        Left = 64
+        Height = 85
         Top = 0
-        Width = 128
+        Width = 85
         OnClick = Image17Click
       end
       object Image18: TImage
         Left = 0
-        Height = 96
-        Top = 64
-        Width = 96
+        Height = 64
+        Top = 43
+        Width = 64
         OnClick = Image18Click
       end
     end
@@ -3967,30 +3966,30 @@ object Form1: TForm1
       ParentFont = False
       object Image19: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image19Click
       end
       object Image20: TImage
-        Left = 32
-        Height = 64
+        Left = 21
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image20Click
       end
       object Image21: TImage
-        Left = 96
-        Height = 128
+        Left = 64
+        Height = 85
         Top = 0
-        Width = 128
+        Width = 85
         OnClick = Image21Click
       end
       object Image22: TImage
         Left = 0
-        Height = 96
-        Top = 64
-        Width = 96
+        Height = 64
+        Top = 43
+        Width = 64
         OnClick = Image22Click
       end
     end
@@ -4001,30 +4000,30 @@ object Form1: TForm1
       ParentFont = False
       object Image29: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image29Click
       end
       object Image30: TImage
-        Left = 32
-        Height = 64
+        Left = 21
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image30Click
       end
       object Image31: TImage
-        Left = 96
-        Height = 128
+        Left = 64
+        Height = 85
         Top = 0
-        Width = 128
+        Width = 85
         OnClick = Image31Click
       end
       object Image32: TImage
         Left = 0
-        Height = 96
-        Top = 64
-        Width = 96
+        Height = 64
+        Top = 43
+        Width = 64
         OnClick = Image32Click
       end
     end
@@ -4035,30 +4034,30 @@ object Form1: TForm1
       ParentFont = False
       object Image33: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image33Click
       end
       object Image34: TImage
-        Left = 32
-        Height = 32
+        Left = 21
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image34Click
       end
       object Image35: TImage
-        Left = 64
-        Height = 64
+        Left = 43
+        Height = 43
         Top = 0
-        Width = 64
+        Width = 43
         OnClick = Image35Click
       end
       object Image36: TImage
-        Left = 128
-        Height = 96
+        Left = 85
+        Height = 64
         Top = 0
-        Width = 128
+        Width = 85
         OnClick = Image36Click
       end
     end
@@ -4069,9 +4068,9 @@ object Form1: TForm1
       ParentFont = False
       object Image37: TImage
         Left = 0
-        Height = 32
+        Height = 21
         Top = 0
-        Width = 32
+        Width = 21
         OnClick = Image37Click
       end
     end
@@ -4079,11 +4078,12 @@ object Form1: TForm1
       Caption = 'Zonen'
       ClientHeight = 172
       ClientWidth = 292
+      ParentFont = False
       object Image38: TImage
         Left = 0
-        Height = 39
+        Height = 26
         Top = 0
-        Width = 39
+        Width = 26
         OnClick = Image38Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963E600000089504E47
@@ -4098,10 +4098,10 @@ object Form1: TForm1
         }
       end
       object Image39: TImage
-        Left = 36
-        Height = 39
+        Left = 24
+        Height = 26
         Top = 0
-        Width = 39
+        Width = 26
         OnClick = Image39Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963E700000089504E47
@@ -4116,10 +4116,10 @@ object Form1: TForm1
         }
       end
       object Image40: TImage
-        Left = 72
-        Height = 39
+        Left = 48
+        Height = 26
         Top = 0
-        Width = 39
+        Width = 26
         OnClick = Image40Click
         Picture.Data = {
           1754506F727461626C654E6574776F726B47726170686963EA00000089504E47
@@ -4136,42 +4136,42 @@ object Form1: TForm1
     end
   end
   object Arrow1: TArrow
-    Left = 1616
-    Height = 30
-    Top = 142
-    Width = 30
-    Constraints.MinHeight = 12
-    Constraints.MinWidth = 12
+    Left = 1077
+    Height = 20
+    Top = 95
+    Width = 20
+    Constraints.MinHeight = 8
+    Constraints.MinWidth = 8
     OnClick = Arrow1Click
   end
   object Arrow2: TArrow
-    Left = 1756
-    Height = 30
+    Left = 1171
+    Height = 20
     Top = 0
-    Width = 30
+    Width = 20
     ArrowType = atUp
-    Constraints.MinHeight = 12
-    Constraints.MinWidth = 12
+    Constraints.MinHeight = 8
+    Constraints.MinWidth = 8
     OnClick = Arrow2Click
   end
   object Arrow3: TArrow
-    Left = 1882
-    Height = 30
-    Top = 117
-    Width = 30
+    Left = 1255
+    Height = 20
+    Top = 78
+    Width = 20
     ArrowType = atDown
-    Constraints.MinHeight = 12
-    Constraints.MinWidth = 12
+    Constraints.MinHeight = 8
+    Constraints.MinWidth = 8
     OnClick = Arrow3Click
   end
   object Arrow4: TArrow
-    Left = 1754
-    Height = 30
-    Top = 202
-    Width = 30
+    Left = 1169
+    Height = 20
+    Top = 135
+    Width = 20
     ArrowType = atRight
-    Constraints.MinHeight = 12
-    Constraints.MinWidth = 12
+    Constraints.MinHeight = 8
+    Constraints.MinWidth = 8
     OnClick = Arrow4Click
   end
 end
