--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 493
+  Left = 502
   Height = 678
-  Top = 257
+  Top = 216
   Width = 1281
   Caption = 'Pascalcity'
   ClientHeight = 678
@@ -3723,5 +3723,29 @@ object Form1: TForm1
     Caption = 'Next Week'
     OnClick = Button2Click
     TabOrder = 4
+  end
+  object Label4: TLabel
+    Left = 298
+    Height = 15
+    Top = 505
+    Width = 93
+    Caption = 'Haus-Nachfrage: '
+    ParentColor = False
+  end
+  object Label5: TLabel
+    Left = 439
+    Height = 15
+    Top = 543
+    Width = 112
+    Caption = 'Gewerbe-Nachfrage: '
+    ParentColor = False
+  end
+  object Label6: TLabel
+    Left = 614
+    Height = 15
+    Top = 530
+    Width = 110
+    Caption = 'Industrie Nachfrage: '
+    ParentColor = False
   end
 end
